# fast-api-project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml
awesome_api/: app.py  claims_management.py  constants.py  entry_points.py  errors.py  fastapi_views.py  models.py  portfolio_management.py  update_management.py
awesome_api/utils/: generate_claims.py  generate_data.py  parallel_extraction.py  postgres_utils.py  sql_utils.py
initial_data/: company_claims.csv  company_credit_scores.csv
tests/: test_entry_points.py  test_fastapi_views.py  test_template_module.py
