[tool.poetry]
name = "awesome_api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.104.1"
gunicorn = "^21.2.0"
uvicorn = {version = "^0.23.0", extras = ["standard"]}
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
httpx = "^0.25.2"

[tool.poetry.scripts]
simple_task = "awesome_api.entry_points:simple_task"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["awesome_api", "tests"]
ignore_missing_imports = true
